# sc-customize-nft

./: .gitignore  Cargo.toml  README.md  coverage.sh  customize_benchmark.md  deploy-mainnet.interaction.json  erdpy.devnet.json  erdpy.json  erdpy.mainnet.json  exp.rs  license.MD  reproduce.sh  run_decode_tests.sh  run_test.sh  run_url_tests.sh
.github/workflows/: rust.yml  trufflehog_scan.yml
configs/: grcov.yml
mandos/: adder.scen.json  init.scen.json
mandos/equip/: equip.scen-deactivated.json  equip.scen.json
mandos/get_item_type/: get-hat.scen-deasac.json  get-hat.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: constants.rs  image_generator.rs  item.rs  item_attributes.rs  item_slot.rs  lib.rs  penguin_attributes.rs  penguins_attributes.rs  utils.rs
src/libs/: customize.rs  endpoint.rs  equippable_minter.rs  equippable_uris.rs  mod.rs  parser.rs  penguin_mint.rs  penguin_parse.rs  penguin_url_builder.rs  storage.rs  url_builder.rs
src/structs/: equippable_attributes.rs  equippable_attributes_to_render.rs  equippable_nft_attributes.rs  image_to_render.rs  item.rs  item_attributes.rs  item_slot.rs  mod.rs  penguin_attributes.rs  penguin_attributes_json.rs  slot.rs  (+2 more)
tests/: build_url_tests.rs  customize_desequip_tests.rs  customize_equip_tests.rs  customize_tests.rs  decode_tests.rs  desequip_tests.rs  encode_tests.rs  equip_tests.rs  fill_tests.rs  first_test.rs  get_item_tests.rs  get_token_name_tests.rs  item_tests.rs  lib.rs  penguins_attributes_tests.rs  register_item_tests.rs  testing_utils.rs  utils.rs  utils_tests.rs
wasm/: Cargo.toml
(+114 files in other folders)
