[package]
name = "equip_penguin"
version = "0.0.0"
authors = [ "Angry Penguins",]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.27.4"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.4"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"

[dependencies]
hex = "0.4"
to-str = "1.0.0"