[package]
name = "equip_penguin"
version = "0.0.0"
authors = [ "Angry Penguins",]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.29.3"

[dev-dependencies.elrond-wasm-debug]
version = "0.29.3"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"