[package]
name = "customize_nft"
version = "1.0.0"
authors = [ "Angry Penguins Colony",]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.32.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.32.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"